Esto es una prueba más

--- a/Home.html
+++ b/Home.html
@@ -19,7 +19,8 @@
 		<div class="titular">
 			<div>
 				<a href="#" class="filtro">
-					Bienvenido <strong>Icemberth</strong>
+					Bienvenido <strong>Icemberth</strong> Prueba más
+					xD
 				</a>
 				<a href="#" class="publicar">	
 					publicar
