--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 		<div class="Content">
 			<div class="Image-User">
 				<div class="BackGround">
-					
+					hola prueba
+					xD
 				</div>
 			</div>
 			<div>
